# CMakeList.txt : CMake project for TICV1C10, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ETICV1C10   "E32.h" "E32_1.cpp""E32_2.cpp""E32_3.cpp" "E32_4.cpp""E32_5.cpp" "E33.h")

# TODO: Add tests and install targets if needed.
